# Story2Video

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  README.md  USER_GUIDE.md  alembic.ini  docker-compose.yml  import_novels.py  pyproject.toml  requirements.txt  reset_pw.py  run_api.py  start.bat  stop.bat  test_generation.py  test_zhipu.py
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 0001_create_users_table.py  0002_create_api_keys_table.py  0003_create_novels_table.py  0004_create_tasks_and_perf_indexes.py  0005_add_api_key_config.py  0006_rename_novel_drafts_to_drafts.py  0007_create_canvases_table.py  0008_add_user_preferences_table.py  0009_create_novel_drafts_table.py  0010_add_draft_group_id.py  0011_add_coze_config_to_api_keys.py  9f58bdbadbe3_add_user_preferences_table.py  a1b2c3d4e5f6_create_novel_drafts_table.py  db8640412864_create_canvases_table.py
app/: main.py
app/core/: auth_sessions.py  celery.py  config.py  dependencies.py  security.py
app/domain/: api_key.py  novel.py  user.py
app/models/: draft.py  (+7 more)
client/: .dockerignore  Dockerfile  canvas-node-test.cjs  canvas-test.cjs  next.config.ts  package-lock.json  package.json  test_canvas.js  test_canvas2.js  test_canvas3.js  test_canvas4.js  tsconfig.tsbuildinfo
scripts/: init-db.sql  install-hooks.sh  pre-commit.sh  setup.ps1  setup.sh  start.bat  start.ps1  start.sh
tests/: conftest.py  test_api_keys.py  test_avatar_providers.py  test_llm_providers.py  test_music_providers.py  test_novels.py  test_tasks.py  test_volume_review.py
(+193 files in other folders)
