[project]
name = "story2video"
version = "1.0.0"
description = "Story2Video - Production-grade FastAPI project"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.0",
    "pydantic-extra-types>=2.10.2",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "aioredis>=2.0.1",
    "redis>=5.2.1",
    "pyjwt>=2.10.1",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.19",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.1",
    "email-validator>=2.2.0",
    "cryptography>=44.0.0",
    "pgvector>=0.3.6",
    "celery>=5.4.0",
    "bcrypt==4.0.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
